# package-peeker

./: LICENSE  README.md  pyproject.toml
src/package_peeker/: cli.py  core.py
src/package_peeker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
